# native-cf-workers-subscribe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deploy.conf.example  example.conf  example.toml  rustfmt.toml  wrangler.toml.example
src/: crud.rs  http.rs  lib.rs  types.rs  utils.rs
